# noether_roscon_2024

./: CMakeLists.solution.txt  CMakeLists.txt  README.md  colcon.pkg  dependencies.repos  package.xml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
exercises/: exercise_0.md  exercise_1a.md  exercise_1a_solution.yaml  exercise_1b.md  exercise_1b_solution.yaml  exercise_2a.md  exercise_2b.md  exercise_2c.md  exercise_2c_solution.yaml
include/noether_roscon_2024/exercise_2a/: camera_standoff_tool_path_modifier_widget.h  mesh_modifier.h  mesh_modifier_widget.h
include/noether_roscon_2024/exercise_2c/: no_op_tool_path_planner.h  no_op_tool_path_planner_widget.h
include/solution/noether_roscon_2024/exercise_2a/: camera_standoff_tool_path_modifier_widget.h  cylinder_segmentation_mesh_modifier_widget.h
include/solution/noether_roscon_2024/exercise_2b/: cylinder_segmentation_mesh_modifier.h  cylinder_segmentation_mesh_modifier_widget.h  no_op_tool_path_planner_widget.h
include/solution/noether_roscon_2024/exercise_2c/: no_op_tool_path_planner.h  no_op_tool_path_planner_widget.h
meshes/: multi_component_mesh.ply  puzzle_piece.ply  puzzle_piece_detailed.ply  stand_single.ply
src/: plugins.cpp
src/exercise_2a/: camera_standoff_tool_path_modifier_widget.cpp  cylinder_segmentation_mesh_modifier.cpp  cylinder_segmentation_mesh_modifier_widget.cpp  mesh_modifier.cpp  mesh_modifier_widget.cpp
src/exercise_2b/: cylinder_segmentation_mesh_modifier.cpp  cylinder_segmentation_mesh_modifier_widget.cpp  no_op_tool_path_planner_widget.cpp
src/exercise_2c/: camera_standoff_tool_path_modifier_widget.cpp  no_op_tool_path_planner.cpp  no_op_tool_path_planner_widget.cpp
src/solution/: plugins.cpp
src/solution/exercise_2a/: camera_standoff_tool_path_modifier_widget.cpp
src/solution/exercise_2b/: cylinder_segmentation_mesh_modifier.cpp  cylinder_segmentation_mesh_modifier_widget.cpp  no_op_tool_path_planner.cpp
src/solution/exercise_2c/: no_op_tool_path_planner.cpp  no_op_tool_path_planner_widget.cpp
