<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>noether_roscon_2024</name>
  <version>0.0.0</version>
  <description>Package for tool path planning workshop at ROSCon 2024</description>
  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <license>Apache 2.0</license>

  <depend>noether_tpp</depend>
  <depend>noether_gui</depend>
  <depend>libqt5-widgets</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
